<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/vegetableCard"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardElevation="7dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_gravity="center"
                        android:layout_height="150dp"
                        android:src="@drawable/vegetables"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetables"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:textSize="25sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/fruitsCard"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardElevation="7dp"
                    app:cardCornerRadius="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_margin="15dp"
                        android:layout_gravity="center"
                        android:layout_height="200dp"
                        android:src="@drawable/fruits"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fruits"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:textSize="25sp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/dairyProductsCard"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardElevation="7dp"
                    app:cardCornerRadius="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_gravity="center"
                        android:layout_height="150dp"
                        android:src="@drawable/dairy_products"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dairy_products"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:textSize="25sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/sweetsCard"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardElevation="7dp"
                    app:cardCornerRadius="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_gravity="center"
                        android:layout_height="150dp"
                        android:src="@drawable/sweets"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sweets"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:textSize="25sp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/picklesCard"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardElevation="7dp"
                    app:cardCornerRadius="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_gravity="center"
                        android:layout_height="150dp"
                        android:src="@drawable/pickles"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pickles"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:textSize="25sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/groceryCard"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardElevation="7dp"
                    app:cardCornerRadius="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="120dp"
                        android:layout_gravity="center"
                        android:layout_height="150dp"
                        android:src="@drawable/grocery"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grocery"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:textSize="25sp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>